--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d3d3d3;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.brand-logo{
+  margin-left: 10px;
+}
+
+form {
+  padding: 20px;
+  margin: 60px 20px 0;
+}
+
+.note{
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.noteslist{
+  padding: 20px;
+  margin-top: 60px;
 }
